# unet_seam

./: .gitignore  AUDIT.md  README.md  dataset_viewer.py  new_acrhitecture.md  new_architecture.md  pyproject.toml  requirements.txt  seam_residual_corrector_spec.md  strip_dataset_viewer.py
ai_collab_protocol/: session.json
colab/: seam_harmonizer_train_eval_colab.ipynb  seam_residual_corrector_train_eval_colab.ipynb
comfy_node/: __init__.py  hann_merge.py  model_loader.py  seam_corrector_node.py  strip_ops.py
configs/: eval_harmonizer_v1.yaml  eval_v1.yaml  export_harmonizer_v1.yaml  export_v1.yaml  finetune_harmonizer_v1.yaml  model_harmonizer_v1.yaml  model_resunet_v1.yaml  train_harmonizer_v1.yaml  train_synth_v1.yaml
manifests/: input_raw_manifest.jsonl  source_bench.jsonl  source_train.jsonl  source_val.jsonl  strip_val_cache.jsonl
scripts/: analyze_tfevents_harmonizer.py  benchmark_harmonizer.py  build_colab_training_notebook.py  build_final_training_bundle.py  build_split.py  cache_val_strips.py  export_harmonizer_safetensors.py  export_safetensors.py  harmonizer_metrics_dashboard.py  harvest_real_strips.py  materialize_strip_dataset.py  package_training_bundle.py  prepare_source.py  preview_synthetic_strips.py  run_bench.py  run_eval.py  run_eval_harmonizer.py  smoke_test_comfy_node.py  train_harmonizer.py  train_resunet.py  validate_strip_cache.py  verify_export.py  verify_harmonizer_export.py  write_colab_runtime_yamls.py
src/: __init__.py
static/: index.html  viewer.css  viewer.js
tests/: test_band_merge.py  test_corner_merge.py  (+11 more)
(+40 files in other folders)
